Melhorias na forma de envio das mensagem.